# net-helper

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  baidu.txt  build.ps1  build.rs  main.cpp  version.cmake
docs/: project.md
docs/superpowers/plans/: 2026-05-22-project-restructure.md
docs/superpowers/specs/: 2026-05-22-project-structure-design.md
src/: console.rs  dns.rs  input.rs  main.cpp  main.rs  mod_dns.cpp  mod_dns.h  mod_tcp.cpp  mod_tcp.h  mod_udp.cpp  mod_udp.h  net.rs  net_common.h  output.rs  socket.h  tcp.rs  tls.rs  udp.rs  version.cpp  version.h  version.rs  ws.rs  ws.rs.fix
src/console/: line.rs  mod.rs  pipe.rs  raw.rs  term.rs
tests/: cert.pem  key.pem  test.py  ws_echo.py
