[package]
name = "net-helper"
version = "1.0.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[[bin]]
name = "net-helper"
path = "src/main.rs"
